# vsme_extractor

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENCE.md  MANIFEST.in  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
examples/: example_cli_extract_pdf_json.ipynb  example_cli_extract_pdf_json.py  example_cli_extract_pdf_xlsx.ipynb  example_cli_extract_pdf_xlsx.py  example_cli_usage.ipynb
exemples/: example_cli_extract_pdf_json.py  example_cli_extract_pdf_xlsx.py  example_extract_pdf.py  example_usage.ipynb
scripts/: match_vsme_codes.py
streamlit_app/: README.md  app.py
tests/: test_cli_list.py  test_cli_output_formats_and_json_options.py  test_indicators.py  test_retrieval_tfidf.py  test_stats.py
vsme_extractor/: __init__.py  cli.py  config.py  error_reporting.py  extraction.py  indicators.py  llm_client.py  logging_utils.py  pdf_loader.py  pipeline.py  prompts.py  retrieval.py  stats.py
vsme_extractor/data/: indicateurs_base_b1_b11.csv  indicateurs_sup_b1_b11.csv  indicateurs_sup_c1_c9.csv  indicateurs_vsme.csv  table_codes_portail_rse.csv
